Add missing --add-opens for unit testing