@@ -121,6 +121,7 @@
                     <reuseForks>true</reuseForks>
                     <argLine>
                         --add-opens java.base/java.io=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/sun.nio.fs=ALL-UNNAMED
                     </argLine>
                 </configuration>
